[gd_scene load_steps=4 format=2]

[ext_resource path="res://Inventory/UI Box faded20x20.png" type="Texture" id=1]
[ext_resource path="res://Scripts/InventorySlot.gd" type="Script" id=2]
[ext_resource path="res://Items/Item Sprites/Carrot Item.png" type="Texture" id=3]

[node name="InventorySlotDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlotTexture" type="TextureRect" parent="."]
margin_left = 502.0
margin_top = 290.0
margin_right = 522.0
margin_bottom = 310.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="ItemTextureRect" type="TextureRect" parent="."]
margin_left = 507.0
margin_top = 295.0
margin_right = 517.0
margin_bottom = 305.0
rect_min_size = Vector2( 10, 10 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[connection signal="gui_input" from="." to="." method="_on_InventorySlotDisplay_gui_input"]
